# regime-engine

./: .gitignore  11.docx  Compute Pipeline Architecture.docx  EXECUTION DIRECTIVE — STRICT MODE.docx  HANDOFF.docx  Hedge Fund Standards - V2.docx  Hedge Fund Standards - V3.docx  Hedge Fund Standards - V4.docx  Hedge Fund Standards Implementation Summary.docx  Hedge Fund Standards.docx  Here.docx  Home.py  INSTITUTIONAL RISK INTELLIGENCE STANDARD.docx  Institutional Risk Intelligence Standard - 11-Metric Audit V2.docx  Institutional Risk Intelligence Standard V1.docx  Institutional Risk Intelligence Standard V2.docx  MATH_EVALUATION_INSTITUTIONAL_STANDARDS.docx  Metric Calculations & Escalation Percentile.docx  Metric Formulas – Exact Specifications.docx  Process A.docx  README.md  Sherif Test 25June24_2026-02-23.csv  Syntax.docx  audit_frozen.sh  audit_report.txt  core_symbols.txt  earnings_symbols.txt  plasmic.json  pyproject.toml  symbols_sectors10.txt  universe.json  ~$TH_EVALUATION_INSTITUTIONAL_STANDARDS.docx
apps/: ~$stitutional Risk Intelligence Standard V2.docx
batches/: U001.txt  U002.txt  U003.txt  U004.txt  U005.txt  U006.txt  U007.txt  U008.txt  U009.txt  U010.txt  U011.txt  U012.txt  U013.txt  U014.txt  U015.txt  U016.txt  U017.txt  U018.txt  U019.txt  U020.txt  U021.txt  U022.txt  U023.txt  U024.txt  U025.txt  U026.txt  U027.txt  U028.txt  U029.txt  U030.txt
core/: asset_class_rules.py  assets_registry.py  data_loader.py  engine.py  manifest.py  schema_versions.py  storage.py  timeframes.py  twelvedata_client.py
data/: btcusd_sample.xlsx
(+304 files in other folders)
